--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "eslint": "^7.18.0",
+    "firebase": "^8.7.1",
     "fuse.js": "^6.4.6",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
